@@ -1,0 +1,16 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>エージェント管理</h1>
+
+<p>
+エージェントを作成するには、このフォームを入力する必要があります。<b>"IPアドレス" </b>および<b> "サーバ" </b>に特に注意しながら、必要なフィールドすべて (エージェント名は必須です) を入力してください。エージェントがサーバに割り当てられ、モニタが実行されるように、サーバはいずれか一つを必ず選択する必要があります。IP アドレスのデフォルト値は localhost です。
+</p>
+<p>
+"間隔" は、エージェントの実行間隔です。どの程度の頻度でエージェントがサーバにデータを送るかです。
+</p>
+<p>
+"サーバ" は、Pandora サーバで、エージェントから送られるデータを受け取ります。
+</p>
