@@ -1,0 +1,27 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>障害状態</h1>
+
+<p>
+このフィールドは、最小と最大の 2つの値があります。これらを正しく設定すると、モジ
+ュールが指定した値になった時に障害状態にすることができます。
+</p>
+
+<p>
+これを理解するために例を見てみましょう。エージェントにおける CPU モジュールは、
+常に緑(正常)になっています。なぜなら、単純に 0% から 100% の間の情報を返している
+だけだからです。CPU 使用率のモジュールで、使用率が 90% になった時に赤(障害状態
+)にしたい場合は、次のように設定します。
+</p>
+</p>
+
+<li>障害状態:90</li>
+
+<p>
+これにより、値が 90 より大きくなると、表示が赤(障害状態)になり、90を下回ると緑
+(正常状態)になります。
+</p>
+
