@@ -1,0 +1,24 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>アラート</h1>
+
+<p>
+Pandora FMS のアラートは、モジュールの値がしきい値を超えると動作します。アラート
+では、管理者への e-mail や SMS 送信、SNMP トラップ送信、インシデント登録や Pando
+ra FMS ログファイルへの記録等ができます。基本的に、Pandora FMS サーバを実行して
+いる OS 上で実行できるスクリプトは何でも実行することができます。
+</p>
+
+<p>
+新規アラートを作成するときは、以下のフィールドを入力する必要があります。
+</p>
+
+<ul>
+	<li>エージェント名: アラートを関連付けるエージェントの名前です。</li>
+	<li>モジュール: しきい値を超えたかどうかを確認するモジュールです。条件に合致すると、(e-mail 送信などの) イベントが発生します。
+	<li>テンプレート: パラメータが定義されたアラートです。管理者が簡単に設定するために利用します。</li>
+	<li>アクション: 設定されたアラートで選択すします。テンプレートで定義されたアクションを選択できます。</li>
+</ul>
