@@ -1,0 +1,29 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>アラート</h1>
+
+Pandora FMS のアラートは、モジュールの値がしきい値を超えると動作します。アラートでは、管理者への e-mail や SMS 送信、SNMP トラップ送信、インシデント登録や Pandora FMS ログファイルへの記録等ができます。基本的に、Pandora FMS サーバを実行している OS 上で実行できるスクリプトは何でも実行することができます。
+<br /><br />
+実行するコマンドを作成する場合、"_field1_", "_field2_", "_field3_" という値を利用できます。
+<br /><br />
+新規アラートを作成するときは、以下のフィールドを入力する必要があります。
+
+<ul>
+	<li>アラート名: アラートの名前です。機能を説明するのに重要ですが、簡潔に書きます。例えば、"Comm. log" などです。</li>
+	<li>コマンド: アラートで実行するコマンドです。これは、アラート定義における一番重要なフィールドです。_field1_, _field2_ および _field3_ というマクロが利用でき、アラート定義のパラメータに置き換えられます。これにより、アラートで実行されるコマンド定義がされます。アラート定義では、アラートが正しく実行でき、期待した動作 (メール送信、ログの記録など) をするかコマンドラインからテストをしてください。</li>
+	<li>説明: アラートの詳細の説明です。入力必須項目ではありません。</li>
+</ul>
+
+アラートで利用できるマクロの詳細は次の通りです。
+
+<ul>
+	<li>_field1_: 通常は、ユーザ名、電話番号、送信するファイル、または、メールの送信先アドレスに利用します。</li>
+	<li>_field2_: 通常は、イベントの短い説明やメールの件名に利用します。</li>
+	<li>_field3_: イベントの詳細説明に利用します。メールや SMS の本文に利用できます。</li>
+	<li>_agent_: エージェント名になります</li>
+	<li>_timestamp_: 日時情報になります。アラートが実行された日時に置き換えられます。</li>
+	<li>_data_: アラートのきっかけとなったモジュールの値になります。</li>
+</ul>
