@@ -1,0 +1,20 @@
+<?php
+/**
+ * @package Include/help/ja
+ */
+?>
+<h1>警告状態</h1>
+
+<p>
+このフィールドは、最小と最大の 2つの値があります。これらを正しく設定すると、モジュールが指定した値になった時に警告状態にすることができます。
+</p>
+
+<p>
+これを理解するために例を見てみましょう。エージェントにおける CPU モジュールは、常に緑(正常)になっています。なぜなら、単純に 0% から 100% の間の情報を返しているだけだからです。CPU 使用率のモジュールで、使用率が 70% になった時に黄色(警告状態)にしたい場合は、次のように設定します。
+</p>
+
+<li>警告状態:70</li>
+
+<p>
+これにより、値が 70 より大きくなると、表示が黄色(警告状態)になり、70を下回ると緑(正常状態)になります。
+</p>
